added logout clear session

--- a/apps/login/templates/login/add.html
+++ b/apps/login/templates/login/add.html
@@ -12,6 +12,6 @@
         <input type="submit" name="" value="ADD">
         </form>
         <a href="/dashboard">Home   </a>
-        <a href="/">Logout</a>
+        <a href="/logout">Logout</a>
     </body>
 </html>
