--- a/apps/login/templates/login/dashboard.html
+++ b/apps/login/templates/login/dashboard.html
@@ -54,6 +54,6 @@
             {% endfor %}
         </table>
         <p><a href="/add">Add item</a></p>
-        <a href="/">Log out</a>
+        <a href="/logout">Log out</a>
     </body>
 </html>
