--- a/apps/login/templates/login/description.html
+++ b/apps/login/templates/login/description.html
@@ -14,6 +14,6 @@
         {% endfor %}
 
         <a href="/dashboard">Home   </a>
-        <a href="/">Logout</a>
+        <a href="/logout">Logout</a>
     </body>
 </html>
